--- a/.settings/com.google.gwt.eclipse.core.prefs
+++ b/.settings/com.google.gwt.eclipse.core.prefs
@@ -1,3 +1,4 @@
-#Fri Sep 23 21:59:19 CEST 2011
+#Tue Oct 25 21:44:13 CEST 2011
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=gwt-servlet.jar
+entryPointModules=eu.riasol.games.untangle.Untangle|eu.riasol.games.untangle.UntangleTest
+filesCopiedToWebInfLib=
